graphics_files = files(
	'Graphics.cpp',
	'RasterGraphics.cpp',
	'FontReader.cpp',
)
powder_graphics_files = files(
	'RendererBasic.cpp',
	'Renderer.cpp',
)
font_graphics_files = files(
	'RendererBasic.cpp',
	'RendererFont.cpp',
)

powder_files += graphics_files + powder_graphics_files
render_files += graphics_files + powder_graphics_files
font_files += graphics_files + font_graphics_files
