gui_files = files(
	'Style.cpp',
)

subdir('colourpicker')
subdir('console')
subdir('dialogues')
subdir('elementsearch')
subdir('filebrowser')
subdir('font')
subdir('game')
subdir('interface')
subdir('localbrowser')
subdir('login')
subdir('options')
subdir('preview')
subdir('profile')
subdir('render')
subdir('save')
subdir('search')
subdir('tags')
subdir('update')

powder_files += gui_files
font_files += gui_files
