client_files += files(
	'APIRequest.cpp',
	'GetUserInfoRequest.cpp',
	'ImageRequest.cpp',
	'Request.cpp',
	'SaveUserInfoRequest.cpp',
	'ThumbnailRequest.cpp',
	'AddTagRequest.cpp',
	'RemoveTagRequest.cpp',
	'GetSaveRequest.cpp',
	'PublishSaveRequest.cpp',
	'UnpublishSaveRequest.cpp',
	'ReportSaveRequest.cpp',
	'FavouriteSaveRequest.cpp',
	'AddCommentRequest.cpp',
	'DeleteSaveRequest.cpp',
	'LoginRequest.cpp',
	'GetSaveDataRequest.cpp',
	'ExecVoteRequest.cpp',
	'UploadSaveRequest.cpp',
	'StartupRequest.cpp',
	'UpdateRequest.cpp',
	'SearchSavesRequest.cpp',
	'SearchTagsRequest.cpp',
	'GetCommentsRequest.cpp',
	'LogoutRequest.cpp',
)

subdir('requestmanager')
