gui_files += files(
	'Appearance.cpp',
	'Button.cpp',
	'Checkbox.cpp',
	'Component.cpp',
	'ContextMenu.cpp',
	'CopyTextButton.cpp',
	'DropDown.cpp',
	'Engine.cpp',
	'Label.cpp',
	'Panel.cpp',
	'ProgressBar.cpp',
	'ScrollPanel.cpp',
	'Slider.cpp',
	'Spinner.cpp',
	'Textbox.cpp',
	'TextWrapper.cpp',
	'Window.cpp',
)

powder_files += files(
	'AvatarButton.cpp',
	'RichLabel.cpp',
	'SaveButton.cpp',
)
