simulation_elem_ids = [
	[ 'NONE',     0 ],
	[ 'DUST',     1 ],
	[ 'WATR',     2 ],
	[ 'OIL',      3 ],
	[ 'FIRE',     4 ],
	[ 'STNE',     5 ],
	[ 'LAVA',     6 ],
	[ 'GUNP',     7 ],
	[ 'NITR',     8 ],
	[ 'CLNE',     9 ],
	[ 'GAS',     10 ],
	[ 'PLEX',    11 ],
	[ 'GOO',     12 ],
	[ 'ICEI',    13 ],
	[ 'METL',    14 ],
	[ 'SPRK',    15 ],
	[ 'SNOW',    16 ],
	[ 'WOOD',    17 ],
	[ 'NEUT',    18 ],
	[ 'PLUT',    19 ],
	[ 'PLNT',    20 ],
	[ 'ACID',    21 ],
	[ 'VOID',    22 ],
	[ 'WTRV',    23 ],
	[ 'CNCT',    24 ],
	[ 'DSTW',    25 ],
	[ 'SALT',    26 ],
	[ 'SLTW',    27 ],
	[ 'DMND',    28 ],
	[ 'BMTL',    29 ],
	[ 'BRMT',    30 ],
	[ 'PHOT',    31 ],
	[ 'URAN',    32 ],
	[ 'WAX',     33 ],
	[ 'MWAX',    34 ],
	[ 'PSCN',    35 ],
	[ 'NSCN',    36 ],
	[ 'LNTG',    37 ],
	[ 'INSL',    38 ],
	[ 'BHOL',    39 ],
	[ 'WHOL',    40 ],
	[ 'RBDM',    41 ],
	[ 'LRBD',    42 ],
	[ 'NTCT',    43 ],
	[ 'SAND',    44 ],
	[ 'GLAS',    45 ],
	[ 'PTCT',    46 ],
	[ 'BGLA',    47 ],
	[ 'THDR',    48 ],
	[ 'PLSM',    49 ],
	[ 'ETRD',    50 ],
	[ 'NICE',    51 ],
	[ 'NBLE',    52 ],
	[ 'BTRY',    53 ],
	[ 'LCRY',    54 ],
	[ 'STKM',    55 ],
	[ 'SWCH',    56 ],
	[ 'SMKE',    57 ],
	[ 'DESL',    58 ],
	[ 'COAL',    59 ],
	[ 'LO2',     60 ],
	[ 'O2',      61 ],
	[ 'INWR',    62 ],
	[ 'YEST',    63 ],
	[ 'DYST',    64 ],
	[ 'THRM',    65 ],
	[ 'GLOW',    66 ],
	[ 'BRCK',    67 ],
	[ 'CFLM',    68 ],
	[ 'FIRW',    69 ],
	[ 'FUSE',    70 ],
	[ 'FSEP',    71 ],
	[ 'AMTR',    72 ],
	[ 'BCOL',    73 ],
	[ 'PCLN',    74 ],
	[ 'HSWC',    75 ],
	[ 'IRON',    76 ],
	[ 'MORT',    77 ],
	[ 'LIFE',    78 ],
	[ 'DLAY',    79 ],
	[ 'CO2',     80 ],
	[ 'DRIC',    81 ],
	[ 'CBNW',    82 ],
	[ 'STOR',    83 ],
	[ 'PVOD',    84 ],
	[ 'CONV',    85 ],
	[ 'CAUS',    86 ],
	[ 'LIGH',    87 ],
	[ 'TESC',    88 ],
	[ 'DEST',    89 ],
	[ 'SPNG',    90 ],
	[ 'RIME',    91 ],
	[ 'FOG',     92 ],
	[ 'BCLN',    93 ],
	[ 'LOVE',    94 ],
	[ 'DEUT',    95 ],
	[ 'WARP',    96 ],
	[ 'PUMP',    97 ],
	[ 'FWRK',    98 ],
	[ 'PIPE',    99 ],
	[ 'FRZZ',   100 ],
	[ 'FRZW',   101 ],
	[ 'GRAV',   102 ],
	[ 'BIZR',   103 ],
	[ 'BIZRG',  104 ],
	[ 'BIZRS',  105 ],
	[ 'INST',   106 ],
	[ 'ISOZ',   107 ],
	[ 'ISZS',   108 ],
	[ 'PRTI',   109 ],
	[ 'PRTO',   110 ],
	[ 'PSTE',   111 ],
	[ 'PSTS',   112 ],
	[ 'ANAR',   113 ],
	[ 'VINE',   114 ],
	[ 'INVIS',  115 ],
	[ 'E116',   116 ],
	[ 'SPAWN2', 117 ],
	[ 'SPAWN',  118 ],
	[ 'SHLD1',  119 ],
	[ 'SHLD2',  120 ],
	[ 'SHLD3',  121 ],
	[ 'SHLD4',  122 ],
	[ 'LOLZ',   123 ],
	[ 'WIFI',   124 ],
	[ 'FILT',   125 ],
	[ 'ARAY',   126 ],
	[ 'BRAY',   127 ],
	[ 'STKM2',  128 ],
	[ 'BOMB',   129 ],
	[ 'C5',     130 ],
	[ 'SING',   131 ],
	[ 'QRTZ',   132 ],
	[ 'PQRT',   133 ],
	[ 'EMP',    134 ],
	[ 'BREC',   135 ],
	[ 'ELEC',   136 ],
	[ 'ACEL',   137 ],
	[ 'DCEL',   138 ],
	[ 'BANG',   139 ],
	[ 'IGNT',   140 ],
	[ 'BOYL',   141 ],
	[ 'GEL',    142 ],
	[ 'TRON',   143 ],
	[ 'TTAN',   144 ],
	[ 'EXOT',   145 ],
	[ 'E146',   146 ],
	[ 'EMBR',   147 ],
	[ 'H2',     148 ],
	[ 'SOAP',   149 ],
	[ 'NBHL',   150 ],
	[ 'NWHL',   151 ],
	[ 'MERC',   152 ],
	[ 'PBCN',   153 ],
	[ 'GPMP',   154 ],
	[ 'CLST',   155 ],
	[ 'WIRE',   156 ],
	[ 'GBMB',   157 ],
	[ 'FIGH',   158 ],
	[ 'FRAY',   159 ],
	[ 'RPEL',   160 ],
	[ 'PPIP',   161 ],
	[ 'DTEC',   162 ],
	[ 'DMG',    163 ],
	[ 'TSNS',   164 ],
	[ 'VIBR',   165 ],
	[ 'BVBR',   166 ],
	[ 'CRAY',   167 ],
	[ 'PSTN',   168 ],
	[ 'FRME',   169 ],
	[ 'GOLD',   170 ],
	[ 'TUNG',   171 ],
	[ 'PSNS',   172 ],
	[ 'PROT',   173 ],
	[ 'VIRS',   174 ],
	[ 'VRSS',   175 ],
	[ 'VRSG',   176 ],
	[ 'GRVT',   177 ],
	[ 'DRAY',   178 ],
	[ 'CRMC',   179 ],
	[ 'HEAC',   180 ],
	[ 'SAWD',   181 ],
	[ 'POLO',   182 ],
	[ 'RFRG',   183 ],
	[ 'RFGL',   184 ],
	[ 'LSNS',   185 ],
	[ 'LDTC',   186 ],
	[ 'SLCN',   187 ],
	[ 'PTNM',   188 ],
	[ 'VSNS',   189 ],
	[ 'ROCK',   190 ],
	[ 'LITH',   191 ],
]

simulation_elem_src = []
foreach elem_name_id : simulation_elem_ids
	simulation_elem_src += elem_name_id[0] + '.cpp'
endforeach
simulation_files += files(simulation_elem_src)
